Bug 186394 - Login Manager doesn't allow UIDs above 999999
Summary: Login Manager doesn't allow UIDs above 999999
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kdm (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdm bugs tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-06 21:29 UTC by Christian González
Modified: 2009-03-07 10:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian González 2009-03-06 21:29:13 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Ubuntu Packages

go to KDE systemsettings ->Login Manager ->Users
You can specify which users are shown, and which not: which are "system users" and which not.
defaults are "below 1000" and "above 29999".
That's a problem, because 29999 is the maximum that this KDE systemsettings module allows:
e.g. group-e (http://www.group-e.info), a Groupware Suite which we have running here, creates users with UIDs beginning with 3000001.

See the problem?

I can't tell KDM to show all users from 3000000 to e.g. 3999999 - because this module prevents this - So I can't use KDE for showing all these LDAP users in KDM.
The highest possible group in Linux is 2147483647, so this should be an easy fix.
Comment 1 Dario Andres 2009-03-07 00:22:22 UTC
It seems that the values are hardcoded (not sure why):

http://websvn.kde.org/trunk/KDE/kdebase/workspace/kcontrol/kdm/kdm-users.cpp?view=markup
Comment 2 Dario Andres 2009-03-07 01:51:32 UTC
It seems that the limits can be removed. I hope KDM people look into this, otherwise I will post a patch.
Comment 3 Oswald Buddenhagen 2009-03-07 09:56:48 UTC
SVN commit 936238 by ossi:

remove arbitrary UID limitation

BUG: 186394


 M  +2 -1      kdm-users.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936238
Comment 4 Christian González 2009-03-07 10:47:41 UTC
Whow, that was a quick fix.
I also think that the usability could easily be improved, but I reportet that as another bug (wish): Bug #186430