remove arbitrary UID limitation

BUG: 186394

svn path=/trunk/KDE/kdebase/workspace/; revision=936238